# WebGenie

./: LICENSE  Setup.py  pyproject.toml  setup.py
WebGenie/: ReadMe.md  Setup.py  __init__.py
WebGenie/WebGenie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
