[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "WebGenie"
authors = [{name = "Nitin Kumar Sharma", email = "nitin.860sharma@gmail.com"}]
readme = "ReadMe.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/thenitinsharma/WebGenie"
